--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,8 +4,11 @@
         <meta charset="utf-8">
         <title></title>
         <link rel="stylesheet" href="/style.css" media="screen" charset="utf-8" />
+
     </head>
     <body>
+        <iframe src="http://ec2-3-138-253-178.us-east-2.compute.amazonaws.com:5000/" allow="camera;microphone">
+        
         <div class="container">
             <video class="video-large" autoplay></video>
             <video id="vid2" controls></video>
@@ -20,5 +23,6 @@
         </button>
         <script src="/socket.js"></script>
         <script type="text/javascript" src="/index.js"></script>
+    </iframe>
     </body>
 </html>
