--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-        <link rel="stylesheet" href="/style.css" media="screen" charset="utf-8" />
 
-    </head>
-    <body>
-        <iframe src="http://ec2-3-138-253-178.us-east-2.compute.amazonaws.com:5000/" allow="camera;microphone">
-        
-        <div class="container">
-            <video class="video-large" autoplay></video>
-            <video id="vid2" controls></video>
-            <div class="users-container" id="users-container">
-                <h4>Users</h4>
-                <div id="users"></div>
-            </div>
-        <div>
-            <button id="btnStop" onclick="stop()">STOP RECORDING</button></p>
-        <button onclick="startCapture()" >
-            capture 
-        </button>
-        <script src="/socket.js"></script>
-        <script type="text/javascript" src="/index.js"></script>
-    </iframe>
-    </body>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js" ></script>
+    
+</head>
+<body>
+    <div class="container">
+        <video class="video-large" autoplay></video>
+        <video id="vid2" controls></video>
+        <div class="users-container" id="users-container">
+            <h4>Users</h4>
+            <div id="users"></div>
+        </div>
+    <div>
+        <button id="btnStop" onclick="stop()">STOP RECORDING</button></p>
+    <button onclick="startCapture()" >
+        capture 
+    </button>
+    <script src="/socket.js"></script>
+    <script  src="index.js"></script>
+
+</body>
 </html>
